# cherab_nagdis

./: .dprint.jsonc  .gitignore  .lefthook.yaml  .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml  readthedocs.yaml  typos.toml
.github/workflows/: ci.yaml  pypi-publish.yaml  test.yaml
docs/source/: api.md  conf.py  contributing.md  examples.md  index.md  intro.md
scripts/: ca.py  create_dataset.py  estimate_temperature.py  pixel_to_yz_coords.py  raytransfer_matrix.py  render_scene.py  restore_radiant.py  tomograms_animation.py
src/cherab/nagdis/experiment/: __init__.py  conditional_average.py  dataset.py  utils.py
src/cherab/nagdis/inversion/: __init__.py  mlem.py  raytransfer.py  utils.py
src/cherab/nagdis/machine/: __init__.py  nagdis_ii.py
src/cherab/nagdis/machine/material/: __init__.py  metal.py  roughmetal.py
src/cherab/nagdis/observers/: __init__.py  camera.py  thin_lens_ccd.pyi  thin_lens_ccd.pyx
src/cherab/nagdis/tools/: __init__.py  emission.py  fetch.py  visualize.py
