[build-system]
requires = ["hatch-cython>=0.6.0", "hatch-vcs", "cherab>=1.5,<2.0"]
build-backend = "hatchling.build"

[project]
name = "cherab-nagdis"
description = "Cherab for NAGDIS-II"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["cherab", "nagdis", "fusion", "plasma", "inversion"]
authors = [{ name = "Koyo Munechika", email = "munechika.koyo@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "plotly",
  "cherab>=1.5,<2.0",
  "calcam",
  "pooch",
  "paramiko",
  "tqdm",
  "rich",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/munechika-koyo/cherab_nagdis"

# ----------------------
# === Version config ===
# ----------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.vcs]

# ----------------------------
# === Build/Package config ===
# ----------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/cherab"]
artifacts = ["*.so", "*.dll", "*.dylib"]
exclude = ["*.pyx"]

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
include_numpy = true
src = "cherab"
compile_args = ["-O3"]
compile_py = false

[tool.hatch.build.targets.wheel.hooks.cython.options.files]
targets = ["**/*.pyx"]

[tool.cibuildwheel]
skip = "pp* *_ppc64le *_i686 *_s390x *-musllinux* cp313-* cp314-*"
build-frontend = "build[uv]"
test-requires = ["pytest", "pytest-cov"]
test-command = "pytest {project}/tests"

# -----------------------
# === Cov/Test config ===
# -----------------------
[tool.coverage.run]
source_pkgs = ["cherab.nagdis"]
branch = true
parallel = true

[tool.coverage.paths]
test = ["src/test", "*/test/src/test"]
tests = ["tests", "*/test/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=cherab_nagdis --cov-report term-missing --no-cov-on-fail"

# --------------------------
# === Lint/Format config ===
# --------------------------
[tool.cython-lint]
max-line-length = 140

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "NPY"]
ignore = [
  "E501", # line too long (allow for docstrings)
  "N802", # function name should be lowercase
  "N803", # argument name should be lowercase
  "N806", # variable in function should be lowercase
]

[tool.ruff.lint.isort]
known-first-party = ["cherab"]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = ["W292"] # no newline at end of file

[tool.docformatter]
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
blank = false

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks, except the below
  "GL01", # Docstring text (summary) should start in the line immediately
  "EX01", # No examples section found
  "SA01", # See Also section not found
  "ES01", # No extended summary found
  "GL08", # The object does not have a docstring
  "RT01", # No Returns section found
  "PR01", # Parameters {missing_params} not documented
  "SS06", # Summary should fit in a single line
]
# remember to use single quotes for regex in TOML
exclude = [ # don't report on objects that match any of these regex
  '\.__repr__$',
]
override_SS05 = ['^Process ', '^Assess ', '^Access ']

# ------------------------------
# === Type checking settings ===
# ------------------------------
[tool.mypy]
files = ["src", "tests"]
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "truthy-bool"]
disable_error_code = ["no-any-return"]

[tool.basedpyright]
include = ["src", "tests"]
pythonPlatform = "All"
typeCheckingMode = "all"
reportMissingTypeStubs = true

# no raysect/cherab type stubs; pytest fixtures
reportUnknownMemberType = false
reportUnknownVariableType = false

# ruff handles this
reportUnusedParameter = false
