[build-system]
requires = ["hatch-cython>=0.6.0", "hatch-vcs", "cherab>=1.5,<2.0"]
build-backend = "hatchling.build"

[project]
name = "cherab-nagdis"
description = "Cherab for NAGDIS-II"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["cherab", "nagdis", "fusion", "plasma", "inversion"]
authors = [{ name = "Koyo Munechika", email = "munechika.koyo@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "plotly",
  "cherab>=1.5,<2.0",
  "calcam",
  "pooch",
  "paramiko",
  "tqdm",
  "rich",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/munechika-koyo/cherab_nagdis"

# ----------------------
# === Version config ===
# ----------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.vcs]

# ----------------------------
# === Build/Package config ===
# ----------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/cherab"]
artifacts = ["*.so", "*.dll", "*.dylib"]
exclude = ["*.pyx"]

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
include_numpy = true
src = "cherab"
compile_args = ["-O3"]
compile_py = false

[tool.hatch.build.targets.wheel.hooks.cython.options.files]
targets = ["**/*.pyx"]

[tool.cibuildwheel]
skip = "pp* *_ppc64le *_i686 *_s390x *-musllinux* cp313-* cp314-*"
build-frontend = "build[uv]"
test-requires = ["pytest", "pytest-cov"]
test-command = "pytest {project}/tests"

# -----------------------
# === Cov/Test config ===
# -----------------------
[tool.coverage.run]
source_pkgs = ["cherab.nagdis"]
branch = true
parallel = true

[tool.coverage.paths]
test = ["src/test", "*/test/src/test"]
tests = ["tests", "*/test/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=cherab_nagdis --cov-report term-missing --no-cov-on-fail"

# ------------------------------
# === Lint / Format settings ===
# ------------------------------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "B",   # flake8-bugbear
  "F",   # pyflakes
  "I",   # isort (import order)
  "N",   # pep8-naming
  "W",   # Warning
  "UP",  # pyupgrade
  "NPY", # numpy specific rules
  "D",   # pydocstyle
  "DOC", # pydoclint
]
preview = true
ignore = [
  # Recommended ignores by ruff when using formatter
  "E501", # line too long
  "N802", # function name should be lowercase
  "N803", # argument name should be lowercase
  "N806", # variable in function should be lowercase
  "D107", # missing docstring in __init__
]

[tool.ruff.lint.isort]
known-first-party = ["cherab"]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
  "W292",
  "D",
  "DOC",
] # no newline at end of file and skip docstring checks
"tests/**" = ["D", "DOC"] # skip docstring checks in tests

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.cython-lint]
max-line-length = 100

# ------------------------------
# === Type checking settings ===
# ------------------------------
[tool.mypy]
files = ["src"]
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "truthy-bool"]
disable_error_code = ["no-any-return"]
plugins = ["numpy.typing.mypy_plugin"]

[tool.pyrefly]
project-includes = ["src"]
